hphp/test/quick/trait_method_modif7.php.expectf

Fatal error: Cannot change static method Foo::f() to non-static in Bar in %s on line 12
